# PIPE-4519-omia-phene-tagger

./: .gitignore  .gitmodules  Dockerfile  Dockerfile_cuda  LICENSE  README.md  data_prep.sh  download_bert_models.sh  download_mpo.sh  environment.yml  get_negative_examples.sh  pyproject.toml  run_training.ipynb  train_on_mpo.sh
models/: README.md
omia_tagger/: build_dict.py  build_distant_corpus.py  neg_detect.py  tagging_text.py  train_phenotagger.py
