[tool.poetry]
name = "omia-tagger"
version = "0.1.0"
description = "Automated clinical synopsis model for OMIA"
authors = ["marius-mather <marius.mather@sydney.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
tensorflow = "^2.14.0"
transformers = "^4.35.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
